--- a/.github/workflows/DeployAndRunByTags.yml
+++ b/.github/workflows/DeployAndRunByTags.yml
@@ -2,7 +2,8 @@ name: Deploy and Run
 env:
   REPO_NAME: ${{ github.event.repository.name }}
 on:
-  workflow_dispatch:
+  push:
+  	tags: ['v*.*.*']
 permissions:
   id-token: write
   contents: read
@@ -17,6 +18,9 @@ jobs:
     - name: 'Checkout GitHub Action'
       uses: actions/checkout@v4.2.1
       
+    - name: 'Get Tag'
+      id: tag
+      uses: devops-actions/actions-get-tag@v1.0.3
 
     - name: 'Login via Docker'
       uses: azure/docker-login@v2
@@ -25,8 +29,8 @@ jobs:
         username: ${{ secrets.REGISTRY_USERNAME }}
         password: ${{ secrets.REGISTRY_PASSWORD }}
     - run: |
-        docker build -t ${{ secrets.ACR_NAME }}/${{env.REPO_NAME}}:${{ github.sha }} -f ./app/Dockerfile ./app
-        docker push ${{ secrets.ACR_NAME }}/${{env.REPO_NAME}}:${{ github.sha }}
+        docker build -t ${{ secrets.ACR_NAME }}/${{env.REPO_NAME}}:${{ steps.tag.outputs.tag }} -f ./app/Dockerfile ./app
+        docker push ${{ secrets.ACR_NAME }}/${{env.REPO_NAME}}:${{ steps.tag.outputs.tag }}
 
   deploy:
     needs: build
@@ -40,14 +44,18 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
     
+    - name: 'Get Tag'
+      id: tag
+      uses: devops-actions/actions-get-tag@v1.0.3
+    
     - name: 'deploy Container Instance'
       uses: azure/aci-deploy@v1.1.3
       with:
         location: eastus
         name: flask-estructura
         resource-group: recurso-aplicada
-        image: ${{ secrets.ACR_NAME }}/${{env.REPO_NAME}}:${{ github.sha }}
-        dns-name-label: flask-estructura-${{ github.run_id }}-${{ github.run_attempt }}
+        image: ${{ secrets.ACR_NAME }}/${{env.REPO_NAME}}:${{ steps.tag.outputs.tag }}
+        dns-name-label: flask-estructura-${{ github.run_id }}-${{ steps.tag.outputs.tag }}
         registry-username: ${{ secrets.REGISTRY_USERNAME }}
         registry-password: ${{ secrets.REGISTRY_PASSWORD }}
         ports: 5000
